--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -1,6 +1,7 @@
 <header>
     <ul>
-        <li><a href="">Categories</a></li>
+        <li><a href="/">Home</a></li>
+        <li><a href="/categories">Categories</a></li>
         <li><a href="/shows">TV Shows!</a></li>
         <li><a href="">Users</a></li>
     </ul>
