--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -89,3 +89,58 @@ button:hover {
   background-color: var(--font-white);
   color: var(--background);
 }
+
+.blue {
+  color: var(--font-blue);
+}
+
+.pink {
+  color: var(--font-pink);
+}
+
+.white {
+  color: var(--font-white);
+}
+
+.background {
+  color: var(--background);
+}
+
+.width-set {
+  background-color: var(--font-white);
+  border: 2px solid var(--font-pink);
+  border-radius: 20px;
+  color: var(--background);
+  display: block;
+  margin: 10px auto;
+  max-width: 600px;
+  text-align: center;
+}
+
+.wrap {
+  display: block;
+  white-space: normal;
+}
+
+.bold {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.review-p {
+  margin: 20px auto;
+}
+
+.movie-image {
+  border-radius: 0%;
+  margin: 0px;
+  margin-bottom: 0px;
+  height: auto;
+  width: 100%;
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.blue-background {
+  background-color: rgb(53, 69, 102);
+}
