--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -39,6 +39,10 @@ h3 {
   margin-bottom: 20px;
 }
 
+h4 {
+  font-size: 1rem;
+}
+
 a {
   color: var(--font-blue);
   width: fit-content;
@@ -87,6 +91,7 @@ button {
 
 button:hover {
   background-color: var(--font-white);
+  border: 1px solid var(--background);
   color: var(--background);
 }
 
@@ -117,13 +122,16 @@ button:hover {
   text-align: center;
 }
 
+.width-600 {
+  max-width: 600px;
+}
+
 .wrap {
   display: block;
   white-space: normal;
 }
 
 .bold {
-  font-size: 1.5rem;
   font-weight: bold;
 }
 
@@ -143,4 +151,17 @@ button:hover {
 
 .blue-background {
   background-color: rgb(53, 69, 102);
+}
+
+.background-color {
+  background-color: var(--background);
+}
+
+.border-dark {
+  border: 1px solid var(--background);
+  margin: 10px auto;
+}
+
+.side-padding {
+  padding: 0px 30px;
 }
