--- a/templates/partials/show_details.html
+++ b/templates/partials/show_details.html
@@ -39,8 +39,8 @@
       `<li class="width-set">
         <h3 class="bold">${review.tagline}</h3>
         <hr>
-        <h3 class="bold">${review.rating}    ${review.stars} out of 5 stars</h3>
-        <h4 class="bold smaller">${review.user_name}    ${review.posting_date}</h4>
+        <h4 class="bold">${review.rating}<br>${review.stars} out of 5 stars</h4>
+        <h4 class="bold smaller">${review.user_name}<br>${review.posting_date}</h4>
         <hr>
         <p class="review-p">${review.review_body}</p>
       </li>`
@@ -48,16 +48,20 @@
   </ul>
 </div>
 <div>
-  <form action="/shows/${thisShow.id}" method="POST">
+  <form class="side-padding width-set" action="/shows/${thisShow.id}" method="POST">
+    <label for="">Write a review:</label>
+    <br>
     <label for="tagline">Create a tagline:</label>
-    <input type="text" id="tagline" name="tagline">
-    <label for="review">Write a review:</label>
-    <input type="text" id="review" name="review_body">
+    <br>
+    <input class="is-rounded border-dark" type="text" id="tagline" name="tagline">
+    <br>
+    <textarea class="textarea is-rounded border-dark" placeholder="Textarea" name="review_body"></textarea>
+    <br>
     <label for="">How many stars would you give this show?</label>
     ${getRatings.map(rating => 
       `<div class="choices">
-          <input type="radio" id="stars" name="stars_id" value="${rating.id}" required>
-          <label class="blue" for="stars">${rating.name}    ${rating.stars} out of 5 stars</label>
+        <input type="radio" id="stars" name="stars_id" value="${rating.id}" required>
+        <label class="background" for="stars">${rating.name} (${rating.stars} out of 5 stars)</label>
       </div>`
     ).join('')}
     <button type="submit">Submit</button>
