--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -3,6 +3,7 @@
         <li><a href="/">Home</a></li>
         <li><a href="/categories">Categories</a></li>
         <li><a href="/shows">TV Shows!</a></li>
+        <li><a href="/actors">Actors</a></li>
         <li><a href="">Users</a></li>
     </ul>
 </header>
