--- a/templates/partials/show_details.html
+++ b/templates/partials/show_details.html
@@ -49,7 +49,7 @@
 </div>
 <div>
   <form class="side-padding width-set" action="/shows/${thisShow.id}" method="POST">
-    <label for="">Write a review:</label>
+    <label for="">Add a review:</label>
     <br>
     <label for="tagline">Create a tagline:</label>
     <br>
