--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -4,6 +4,6 @@
         <li><a href="/categories">Categories</a></li>
         <li><a href="/shows">TV Shows!</a></li>
         <li><a href="/actors">Actors</a></li>
-        <li><a href="">Users</a></li>
+        <li><a href="/users">Users</a></li>
     </ul>
 </header>
