Created user sign in and user profile page. Adjusted header to check for sign in.

--- a/templates/partials/signup.html
+++ b/templates/partials/signup.html
@@ -15,5 +15,9 @@
         <label for="password">Create a password:</label>
         <input id="password" name="password" type="password" placeholder="Enter a Password">
     </div>
+    <div>
+        <label for="tagline">Create a tagline:</label>
+        <input id="tagline" name="tagline" type="tagline" placeholder="This is your headline...">
+    </div>
     <button type="submit">Register</button>
 </form>
