--- a/templates/partials/show_details.html
+++ b/templates/partials/show_details.html
@@ -37,33 +37,41 @@
   <ul class="wrap">
     ${thisShowReviews.map(review =>
       `<li class="width-set">
-        <h3 class="bold">${review.tagline}</h3>
+        <h3 class="bold">${review.tagline}<br>${review.user_first_name}</h3>
+        <h4 class="bold smaller">${review.posting_date}</h4>
         <hr>
         <h4 class="bold">${review.rating}<br>${review.stars} out of 5 stars</h4>
-        <h4 class="bold smaller">${review.user_name}<br>${review.posting_date}</h4>
+        
         <hr>
         <p class="review-p">${review.review_body}</p>
       </li>`
       ).join('')}
   </ul>
 </div>
-<div>
-  <form class="side-padding width-set" action="/shows/${thisShow.id}" method="POST">
-    <label for="">Add a review:</label>
-    <br>
-    <label for="tagline">Create a tagline:</label>
-    <br>
-    <input class="is-rounded border-dark" type="text" id="tagline" name="tagline">
-    <br>
-    <textarea class="textarea is-rounded border-dark" placeholder="Textarea" name="review_body"></textarea>
-    <br>
-    <label for="">How many stars would you give this show?</label>
-    ${getRatings.map(rating => 
-      `<div class="choices">
-        <input type="radio" id="stars" name="stars_id" value="${rating.id}" required>
-        <label class="background" for="stars">${rating.name} (${rating.stars} out of 5 stars)</label>
-      </div>`
-    ).join('')}
-    <button type="submit">Submit</button>
-  </form>
-</div>
+${!!is_logged_in ?
+  `<div>
+    <form class="side-padding width-set" action="/shows/${thisShow.id}" method="POST">
+      <input type="hidden" name="user_id" value='${user_id}'>
+      <label for="">Add a review:</label>
+      <br>
+      <label for="tagline">Create a tagline:</label>
+      <br>
+      <input class="is-rounded border-dark" type="text" id="tagline" name="tagline">
+      <br>
+      <textarea class="textarea is-rounded border-dark" placeholder="Textarea" name="review_body"></textarea>
+      <br>
+      <label for="">How many stars would you give this show?</label>
+      ${getRatings.map(rating => 
+        `<div class="choices">
+          <input type="radio" id="stars" name="stars_id" value="${rating.id}" required>
+          <label class="background" for="stars">${rating.name} (${rating.stars} out of 5 stars)</label>
+        </div>`
+      ).join('')}
+      <button type="submit">Submit</button>
+    </form>
+  </div>`
+  :
+  `<div>
+    <p>Login to leave a review.</p>
+  </div>`
+}
