--- a/templates/partials/login.html
+++ b/templates/partials/login.html
@@ -1,11 +1,11 @@
 <form action="/users/login" method="POST">
     <div>
         <label for="email">Email:</label>
-        <input id="email" name="email" type="email" placeholder="Email...."/>
+        <input id="email" name="email" type="email" placeholder="Email...." required/>
     </div>
     <div>
         <label for="password">Password:</label>
-        <input id="password" name="password" type="password" placeholder="Enter a Password"/>
+        <input id="password" name="password" type="password" placeholder="Enter a Password" required/>
     </div>
     <button type="submit">Login</button>
 </form>
