--- a/templates/partials/signup.html
+++ b/templates/partials/signup.html
@@ -1,23 +1,23 @@
 <form action="/users/signup" method="POST">
     <div>
         <label for="first_name">First Name:</label>
-        <input id="first_name" name="first_name" type="text" placeholder="First Name....">
+        <input id="first_name" name="first_name" type="text" placeholder="First Name...." required>
     </div>
     <div>
         <label for="last_name">Last Name:</label>
-        <input id="last_name" name="last_name" type="text" placeholder="Last Name....">
+        <input id="last_name" name="last_name" type="text" placeholder="Last Name...." required>
     </div>
     <div>
         <label for="email">Email:</label>
-        <input id="email" name="email" type="email" placeholder="Email....">
+        <input id="email" name="email" type="email" placeholder="Email...." required>
     </div>
     <div>
         <label for="password">Create a password:</label>
-        <input id="password" name="password" type="password" placeholder="Enter a Password">
+        <input id="password" name="password" type="password" placeholder="Enter a Password" required>
     </div>
     <div>
         <label for="tagline">Create a tagline:</label>
-        <input id="tagline" name="tagline" type="tagline" placeholder="This is your headline...">
+        <input id="tagline" name="tagline" type="tagline" placeholder="This is your headline..." required>
     </div>
     <button type="submit">Register</button>
 </form>
